refactor: List 생성 방식을 Stream.toList()로 변경